@@ -1,7 +1,7 @@
 This is Parrot, version 0.0.10
 ------------------------------
 
-Parrot is Copyright (C) 2001-2002 Yet Another Society. All Rights Reserved.
+Parrot is Copyright (C) 2001-2003 Yet Another Society. All Rights Reserved.
 
 LICENSE INFORMATION
 -------------------
