@@ -1,5 +1,5 @@
 /* nci.h
- *  Copyright: 2002 Yet Another Society
+ *  Copyright: 2002-2003 Yet Another Society
  *  CVS Info
  *     $Id$
  *  Overview:
