@@ -421,7 +421,7 @@ op seek(out INT, in PMC, in INT, in INT, in INT) {
 
 =head1 COPYRIGHT
 
-Copyright (C) 2001-2002 Yet Another Society. All rights reserved.
+Copyright (C) 2001-2003 Yet Another Society. All rights reserved.
 
 =head1 LICENSE
 
